# 3dDynamicsSim

./: .gitignore  CMakeLists.txt  README.md  animate.py  foo6.py  gyro.csv
include/: RigidBody.h  utils.h
src/: RigidBody.cpp  gyroToRotation.cpp  main.cpp  rotationTest.cpp  utils.cpp
